--- a/homework6/index.html
+++ b/homework6/index.html
@@ -20,13 +20,66 @@
                  ServiceLogin">Войти</a>
     </nav>
 </header>
-<!--<div>-->
-<!--    <img src="https://www.google.com.ua/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">-->
+<!--<div class="body">-->
+<!--     <form action="https://google.com/search" method="GET" >-->
+<!--        <div class="body__image">-->
+<!--            <img src="https://www.google.com.ua/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">-->
+<!--        </div>-->
+<!--        <div class="search">-->
+<!--            <input class="search__input" type="text" name="q">-->
+<!--        </div>-->
+<!--        <div class="body__button button__luck">-->
+<!--                <input class="body__button__search" type="submit" value="Поиск в Google">-->
+<!--        </div>-->
+<!--    </form>-->
+<!--    <div class="body__button button__luck">-->
+<!--        <a href="https://www.google.com/doodles">-->
+<!--            <input class="body__button__luck" type="submit" value="Мне повезёт!">-->
+<!--        </a>-->
+<!--    </div>-->
+<!--            -->
+<!--        -->
 <!--</div>-->
+
+<div class="body">
+    <div class="body__image">
+        <img src="https://www.google.com.ua/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
+    </div>
+    <div class="search">
+        <input class="search__input" type="text">
+    </div>
+    <div class="body__button">
+        <input class="body__button__search" type="submit" value="Поиск в Google">
+        <a href="https://www.google.com/doodles">
+            <input class="body__button__luck" type="submit" value="Мне повезёт!">
+        </a>
+    </div>
+    <div class="language">
+        <p class="language__paragraph">Сервисы Google доступны на разных языках: <a href="">українська</a></p>
+    </div>
+</div>
+
 
 
 <footer>
-
+    <div class="footer">
+        <div class="footer__top">
+            <span>
+                <p class="footer__paragraph">Украина</p>
+            </span>
+        </div>
+        <span class="footer__nav__left">
+            <a href="">Реклама</a>
+            <a href="">Для бизнеса</a>
+            <a href="">Всё о Google</a>
+            <a href="">Как работает Google Поиск</a>
+        </span>
+        <span class="footer__nav__right">
+            <a href="">Конфиденциальность</a>
+            <a href="">Условия</a>
+            <a href="">Настройки</a>
+        </span>
+    </div>
 </footer>
 
 </body>
