--- a/homework6/index.html
+++ b/homework6/index.html
@@ -20,33 +20,33 @@
                  ServiceLogin">Войти</a>
     </nav>
 </header>
-<!--<div class="body">-->
-<!--     <form action="https://google.com/search" method="GET" >-->
-<!--        <div class="body__image">-->
-<!--            <img src="https://www.google.com.ua/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">-->
-<!--        </div>-->
-<!--        <div class="search">-->
-<!--            <input class="search__input" type="text" name="q">-->
-<!--        </div>-->
-<!--        <div class="body__button button__luck">-->
-<!--                <input class="body__button__search" type="submit" value="Поиск в Google">-->
-<!--        </div>-->
-<!--    </form>-->
-<!--    <div class="body__button button__luck">-->
-<!--        <a href="https://www.google.com/doodles">-->
-<!--            <input class="body__button__luck" type="submit" value="Мне повезёт!">-->
-<!--        </a>-->
-<!--    </div>-->
-<!--            -->
-<!--        -->
-<!--</div>-->
-
 <div class="body">
+
+    <form action="https://google.com/search" method="GET" >
+        <div class="body__image">
+            <img src="https://www.google.com.ua/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
+        </div>
+        <div class="search">
+            <input class="search__input" type="text" name="q">
+        </div>
+        <div class="body__button button__search">
+            <input class="body__button__search" type="submit" value="Поиск в Google">
+        </div>
+    </form>
+    <div class="body__button button__luck">
+        <a href="https://www.google.com/doodles">
+            <input class="body__button__luck" type="submit" value="Мне повезёт!">
+        </a>
+    </div>
+
+</div> 
+
+<!-- <div class="body">
     <div class="body__image">
         <img src="https://www.google.com.ua/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
     </div>
     <div class="search">
-        <input class="search__input" type="text">
+        <input class="search__input" type="text" autocomplete="on">
     </div>
     <div class="body__button">
         <input class="body__button__search" type="submit" value="Поиск в Google">
@@ -58,7 +58,7 @@
         <p class="language__paragraph">Сервисы Google доступны на разных языках: <a href="">українська</a></p>
     </div>
 </div>
-
+ -->
 
 
 <footer>
