fix search google

--- a/homework6/index.html
+++ b/homework6/index.html
@@ -14,52 +14,31 @@
                  rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%3Ftab%3Dwm%26ogbl&scc=1&ltmpl=
                  default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Почта</a>
         <a class="navigation__link navigation__image" href="https://www.google.com.ua/imghp?hl=ru&tab=wi&ogbl">Картинки</a>
-<!--                <a class="navigation__link navigation__image" href="https://about.google/intl/ru/products/?tab=wh"></a>-->
         <a class="navigation__link navigation__login" href="https://accounts.google.com/ServiceLogin/signinchooser?hl=ru&passive=true&
                  continue=https%3A%2F%2Fwww.google.com.ua%2F%3Fhl%3Dru&flowName=GlifWebSignIn&flowEntry=
                  ServiceLogin">Войти</a>
     </nav>
 </header>
-<div class="body">
 
+<div class="body">
     <form action="https://google.com/search" method="GET" >
         <div class="body__image">
             <img src="https://www.google.com.ua/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
         </div>
         <div class="search">
-            <input class="search__input" type="text" name="q">
+            <input class="search__input" type="text" autocomplete="on" name="q">
         </div>
-        <div class="body__button button__search">
+        <div class="body__button">
             <input class="body__button__search" type="submit" value="Поиск в Google">
+            <a href="https://www.google.com/doodles">
+                <input class="body__button__luck" type="button" value="Мне повезёт!">
+            </a>
         </div>
     </form>
-    <div class="body__button button__luck">
-        <a href="https://www.google.com/doodles">
-            <input class="body__button__luck" type="submit" value="Мне повезёт!">
-        </a>
-    </div>
-
-</div> 
-
-<!-- <div class="body">
-    <div class="body__image">
-        <img src="https://www.google.com.ua/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
-    </div>
-    <div class="search">
-        <input class="search__input" type="text" autocomplete="on">
-    </div>
-    <div class="body__button">
-        <input class="body__button__search" type="submit" value="Поиск в Google">
-        <a href="https://www.google.com/doodles">
-            <input class="body__button__luck" type="submit" value="Мне повезёт!">
-        </a>
-    </div>
     <div class="language">
         <p class="language__paragraph">Сервисы Google доступны на разных языках: <a href="">українська</a></p>
     </div>
 </div>
- -->
-
 
 <footer>
     <div class="footer">
