--- a/homework7/index.html
+++ b/homework7/index.html
@@ -1,28 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<style>
-		#contact{
-			width: 100px;
-			height: 100px;
-			background-color: red;
-		}
-.modal {
-      opacity: 0;
-    }
-		.modal:target {
-      opacity: 1;
-      pointer-events: auto;
-      transform: scale(1);
-    }
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        html {
+            font-family: Helvetica, sans-serif;
+            font-size: 18px;
+        }
+        body {
+            display: flex;
+        }
+        .Modal__opener {
+            margin: auto;
+        }
+        .Modal {
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            pointer-events: none;
+            background-color: rgba(0, 0, 0, .5);
+            display: flex;
+            transform: scale(1.05);
+            transition: opacity .2s ease-in, transform .3s ease-in;
+        }
+        .Modal:target {
+            opacity: 1;
+            pointer-events: auto;
+            transform: scale(1);
+        }
+        .contact{
+            margin-right: auto;
+        }
+        .Form {
+            margin: auto;
+            width: 300px;
+            height: 400px;
+            padding: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: center;
+            background-color: white;
+            border-radius: 4px;
+            position: relative;
+        }
+        .Form__field {
+            border: 1px solid #ccc;
+            margin: 5px 0;
+            width: 100%;
+            font-size: .8rem;
+        }
+        .Form__submit {
+            padding: 10px 20px;
+            position: absolute;
+            right: 30px;
+            bottom: 30px;
+            background-color: lightgreen;
+            border: none;
+            color: white;
+            font-size: 1rem;
+        }
+    </style>
 </head>
 <body>
+<a href="#contact" class="Modal__opener">Открыть модальное окно</a>
 
-	<a href="#contact">Открыть модальное окно</a>
-	<div class="modal" id="contact"></div>
-	
+<div class="Modal" id="contact">
+    <div class="Form">
+        <span class="contact">Контакты</span>
+        <div  class="Form__field">
+			<div>
+				Номер телефона:
+			</div>
+            <div>
+                +380000000000
+            </div>
+        </div>
+        <div  class="Form__field">
+            <div>
+                Имя:
+            </div>
+            <div>
+                Олег
+            </div>
+        </div>
+        <div  class="Form__field">
+            <div>
+                Фамилия:
+            </div>
+            <div>
+                Москаленко
+            </div>
+        </div>
+        <a href="#" class="Form__submit">Закрыть</a>
+    </div>
+</div>
 </body>
 </html>
