--- a/test/index.html
+++ b/test/index.html
@@ -12,8 +12,15 @@
 			position: absolute;
 			left: 0;
 			top: 0;
-			width: 50px;
-			height: 50px;
+			width: 65px;
+			height: 65px;
+			background-image: url("https://www.androidfreeware.net/software_images/battle-city1.1.png");
+		}
+
+		.shot{
+			position: absolute;
+			width: 10px;
+			height: 10px;
 			background: red;
 		}
 	</style>
@@ -21,9 +28,20 @@
 <body>
 	
 	<div class="rect"></div>
+	<div class="shot"></div>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 	<script>
+
+		function shot(left, top) {
+
+				setInterval(function () {
+						left += 10;
+					$('.shot').animate({
+						"left": left
+					});
+				}, 1);
+		}
         (function(){
         	var left = 0;
 	        var top = 0;
@@ -44,21 +62,29 @@
 
 
 			  setInterval(function(){
-			  		if(keyMap[38]) {
-			  			top -= 5;
-			  		}
-		  			if(keyMap[40]) {
-			  			top += 5;
-			  		}
-			  		if(keyMap[37]) {
-			  			left -= 5;
-			  		}
-			  		if(keyMap[39]) {
-			  			left += 5;
-			  		}
+				  if(keyMap[38]) {
+					  $('.rect').css({"transform": "rotate(0deg)"});
+					  top -= 5;
+				  }
+				  if(keyMap[40]) {
+					  $('.rect').css({"transform": "rotate(180deg)"});
+					  top += 5;
+					}
+				  if(keyMap[37]) {
+					  $('.rect').css({"transform": "rotate(270deg)"});
+					  left -= 5;
+				  }
+				  if(keyMap[39]) {
+					  $('.rect').css({"transform": "rotate(90deg)"});
+					  left += 5;
+				  }
 
-					$('.rect').css({ top: top, left: left });
+					$(".rect").css({ "top": top, "left": left });
+				  if(keyMap[32]) {
+					  setTimeout(shot(left, top),2000);
+				  }
 			  }, 15);
+
 
 			});
         })();
