--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,9 @@
 	<style>
 		body {
 			position: relative;
+			height: 100vh;
+			margin: 0;
+			padding: 0;
 		}
 
 		.rect {
@@ -28,28 +31,25 @@
 <body>
 	
 	<div class="rect"></div>
-	<div class="shot"></div>
-
+	
 	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+	<script src="./bullet.js"></script>
+	<script src="./tank.js"></script>
 	<script>
-
-		function shot(left, top) {
-
-				setInterval(function () {
-						left += 10;
-					$('.shot').animate({
-						"left": left
-					});
-				}, 1);
-		}
         (function(){
-        	var left = 0;
-	        var top = 0;
 	        var keyMap = {};
+	        var tank = new Tank();
+	        // var bullet = new Bullet();
 
 			$(document).ready(function(){
 			  $(document).on('keydown', function(event){
 	  			keyMap[event.keyCode] = true;
+			  });
+
+			  $(document).on('keypress', function(event){
+	  			if(event.keyCode == 32){
+	  				tank.fire();
+	  			}
 			  });
 
 			  $(document).on('keyup', function(event){
@@ -60,31 +60,10 @@
 		  		// right 39
 			  });
 
-
 			  setInterval(function(){
-				  if(keyMap[38]) {
-					  $('.rect').css({"transform": "rotate(0deg)"});
-					  top -= 5;
-				  }
-				  if(keyMap[40]) {
-					  $('.rect').css({"transform": "rotate(180deg)"});
-					  top += 5;
-					}
-				  if(keyMap[37]) {
-					  $('.rect').css({"transform": "rotate(270deg)"});
-					  left -= 5;
-				  }
-				  if(keyMap[39]) {
-					  $('.rect').css({"transform": "rotate(90deg)"});
-					  left += 5;
-				  }
-
-					$(".rect").css({ "top": top, "left": left });
-				  if(keyMap[32]) {
-					  setTimeout(shot(left, top),2000);
-				  }
+				  tank.update(keyMap);
+				  tank.render();
 			  }, 15);
-
 
 			});
         })();
