--- a/homework8/index.html
+++ b/homework8/index.html
@@ -113,7 +113,7 @@
 
     <div class="container">
         <div class="row product">
-            <div class="card col-sm product-item">
+            <div class="card col-xl col-md-5 product-item">
                 <img class="card-img-top" src="image/product.png" alt="product">
                 <div class="card-rating">
                     <div>
@@ -142,7 +142,7 @@
                         <label for="c4"><span></span>5кг</label>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-between price">
+                <div class=" d-flex justify-content-between price">
                     <div class="discount" >
                         <img src="image/discount.png" alt="discount">
                     </div>
@@ -151,7 +151,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card col-sm product-item">
+            <div class="card col-xl col-md-5 product-item">
                 <img class="card-img-top" src="image/product.png" alt="product">
                 <div class="card-rating">
                     <div>
@@ -171,7 +171,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card col-sm product-item">
+            <div class="card col-xl col-md-5 product-item">
                 <img class="card-img-top" src="image/product.png" alt="product">
                 <div class="card-rating">
                     <div>
@@ -191,7 +191,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card col-sm product-item">
+            <div class="card col-xl col-md-5 product-item">
                 <img class="card-img-top" src="image/product.png" alt="product">
                 <div class="card-rating">
                     <div>
@@ -224,7 +224,7 @@
                     </span>
                 </div>
                 <p class="card-text">PRO PAC Ultimates Large Breed Chicken & Brown Rice ПРО ПАК для собак</p>
-                <div class="row d-flex justify-content-between weight-product">
+                <div class="d-flex justify-content-between weight-product">
                     <div>
                         <input type="radio" id="a1" name="aa" />
                         <label for="a1"><span></span>300гр</label>
@@ -242,7 +242,7 @@
                         <label for="a4"><span></span>5кг</label>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-between price">
+                <div class="d-flex justify-content-between price">
                     <div class="d-flex align-items-center cost" >
                         <img src="image/cost.png" alt="discount">
                     </div>
