--- a/homework15/register.html
+++ b/homework15/register.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Form</title>
 
+    <link rel="stylesheet" href="./node_modules/reset-css/reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
